// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SideBar > should render 1`] = `
<DocumentFragment>
  <div
    class="relative py-2 px-6 -mx-6 -mt-4 border-t md:p-0 md:m-0 md:bg-transparent md:border-t-0 lg:hidden dark:bg-black border-theme-secondary-300 bg-theme-secondary-200 dark:border-theme-dark-700 dark:md:bg-transparent"
  >
    <div
      aria-expanded="false"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="flex overflow-hidden items-center py-3 px-4 space-x-4 bg-white rounded border border-transparent cursor-pointer dark:border md:border-theme-secondary-300 dark:border-theme-dark-700 dark:bg-theme-dark-900"
      >
        <span
          class="flex-1 font-semibold leading-tight"
        >
          General
        </span>
        <div
          class="transition-transform"
        >
          <div
            style="height: 10px; width: 10px;"
          >
            <svg
              id="chevron-down-small"
              style="height: 100%; width: 100%;"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="hidden p-1 rounded-xl border lg:block border-theme-secondary-300 w-[200px] dark:border-theme-dark-700"
  >
    <ul
      class="space-y-1"
    >
      <li
        class="relative cursor-default"
        data-testid="side-menu__item--general"
      >
        <div
          class="flex relative items-center px-5 h-12 rounded-lg transition-all group bg-theme-secondary-200 text-theme-primary-600 dark:bg-theme-dark-950 dark:text-theme-dark-50"
        >
          <span
            class="font-semibold"
          >
            General
          </span>
        </div>
      </li>
      <li
        class="relative cursor-pointer"
        data-testid="side-menu__item--password"
      >
        <div
          class="flex relative items-center px-5 h-12 rounded-lg transition-all group dark:hover:bg-theme-dark-950 dark:hover:text-theme-dark-50 hover:bg-theme-secondary-200 hover:text-theme-secondary-800"
        >
          <span
            class="font-semibold"
          >
            Password
          </span>
        </div>
      </li>
      <li
        class="relative cursor-pointer"
        data-testid="side-menu__item--export"
      >
        <div
          class="flex relative items-center px-5 h-12 rounded-lg transition-all group dark:hover:bg-theme-dark-950 dark:hover:text-theme-dark-50 hover:bg-theme-secondary-200 hover:text-theme-secondary-800"
        >
          <span
            class="font-semibold"
          >
            Export
          </span>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`SideBar > should render responsive dropdown 1`] = `
<DocumentFragment>
  <div
    class="relative py-2 px-6 -mx-6 -mt-4 border-t md:p-0 md:m-0 md:bg-transparent md:border-t-0 lg:hidden dark:bg-black border-theme-secondary-300 bg-theme-secondary-200 dark:border-theme-dark-700 dark:md:bg-transparent"
  >
    <div
      aria-controls=":r2:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="flex overflow-hidden items-center py-3 px-4 space-x-4 bg-white rounded border border-transparent cursor-pointer dark:border md:border-theme-secondary-300 dark:border-theme-dark-700 dark:bg-theme-dark-900"
      >
        <span
          class="flex-1 font-semibold leading-tight"
        >
          General
        </span>
        <div
          class="transition-transform rotate-180"
        >
          <div
            style="height: 10px; width: 10px;"
          >
            <svg
              id="chevron-down-small"
              style="height: 100%; width: 100%;"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="hidden p-1 rounded-xl border lg:block border-theme-secondary-300 w-[200px] dark:border-theme-dark-700"
  >
    <ul
      class="space-y-1"
    >
      <li
        class="relative cursor-default"
        data-testid="side-menu__item--general"
      >
        <div
          class="flex relative items-center px-5 h-12 rounded-lg transition-all group bg-theme-secondary-200 text-theme-primary-600 dark:bg-theme-dark-950 dark:text-theme-dark-50"
        >
          <span
            class="font-semibold"
          >
            General
          </span>
        </div>
      </li>
      <li
        class="relative cursor-pointer"
        data-testid="side-menu__item--password"
      >
        <div
          class="flex relative items-center px-5 h-12 rounded-lg transition-all group dark:hover:bg-theme-dark-950 dark:hover:text-theme-dark-50 hover:bg-theme-secondary-200 hover:text-theme-secondary-800"
        >
          <span
            class="font-semibold"
          >
            Password
          </span>
        </div>
      </li>
      <li
        class="relative cursor-pointer"
        data-testid="side-menu__item--export"
      >
        <div
          class="flex relative items-center px-5 h-12 rounded-lg transition-all group dark:hover:bg-theme-dark-950 dark:hover:text-theme-dark-50 hover:bg-theme-secondary-200 hover:text-theme-secondary-800"
        >
          <span
            class="font-semibold"
          >
            Export
          </span>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`SideBar > should render responsive dropdown 2`] = `
<DocumentFragment>
  <div
    class="relative py-2 px-6 -mx-6 -mt-4 border-t md:p-0 md:m-0 md:bg-transparent md:border-t-0 lg:hidden dark:bg-black border-theme-secondary-300 bg-theme-secondary-200 dark:border-theme-dark-700 dark:md:bg-transparent"
  >
    <div
      aria-controls=":r5:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="flex overflow-hidden items-center py-3 px-4 space-x-4 bg-white rounded border border-transparent cursor-pointer dark:border md:border-theme-secondary-300 dark:border-theme-dark-700 dark:bg-theme-dark-900"
      >
        <span
          class="flex-1 font-semibold leading-tight"
        >
          General
        </span>
        <div
          class="transition-transform rotate-180"
        >
          <div
            style="height: 10px; width: 10px;"
          >
            <svg
              id="chevron-down-small"
              style="height: 100%; width: 100%;"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="hidden p-1 rounded-xl border lg:block border-theme-secondary-300 w-[200px] dark:border-theme-dark-700"
  >
    <ul
      class="space-y-1"
    >
      <li
        class="relative cursor-default"
        data-testid="side-menu__item--general"
      >
        <div
          class="flex relative items-center px-5 h-12 rounded-lg transition-all group bg-theme-secondary-200 text-theme-primary-600 dark:bg-theme-dark-950 dark:text-theme-dark-50"
        >
          <span
            class="font-semibold"
          >
            General
          </span>
        </div>
      </li>
      <li
        class="relative cursor-pointer"
        data-testid="side-menu__item--password"
      >
        <div
          class="flex relative items-center px-5 h-12 rounded-lg transition-all group dark:hover:bg-theme-dark-950 dark:hover:text-theme-dark-50 hover:bg-theme-secondary-200 hover:text-theme-secondary-800"
        >
          <span
            class="font-semibold"
          >
            Password
          </span>
        </div>
      </li>
      <li
        class="relative cursor-pointer"
        data-testid="side-menu__item--export"
      >
        <div
          class="flex relative items-center px-5 h-12 rounded-lg transition-all group dark:hover:bg-theme-dark-950 dark:hover:text-theme-dark-50 hover:bg-theme-secondary-200 hover:text-theme-secondary-800"
        >
          <span
            class="font-semibold"
          >
            Export
          </span>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`SideBar > should render responsive dropdown 3`] = `
<DocumentFragment>
  <div
    class="relative py-2 px-6 -mx-6 -mt-4 border-t md:p-0 md:m-0 md:bg-transparent md:border-t-0 lg:hidden dark:bg-black border-theme-secondary-300 bg-theme-secondary-200 dark:border-theme-dark-700 dark:md:bg-transparent"
  >
    <div
      aria-controls=":r8:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="flex overflow-hidden items-center py-3 px-4 space-x-4 bg-white rounded border border-transparent cursor-pointer dark:border md:border-theme-secondary-300 dark:border-theme-dark-700 dark:bg-theme-dark-900"
      >
        <span
          class="flex-1 font-semibold leading-tight"
        >
          General
        </span>
        <div
          class="transition-transform rotate-180"
        >
          <div
            style="height: 10px; width: 10px;"
          >
            <svg
              id="chevron-down-small"
              style="height: 100%; width: 100%;"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="hidden p-1 rounded-xl border lg:block border-theme-secondary-300 w-[200px] dark:border-theme-dark-700"
  >
    <ul
      class="space-y-1"
    >
      <li
        class="relative cursor-default"
        data-testid="side-menu__item--general"
      >
        <div
          class="flex relative items-center px-5 h-12 rounded-lg transition-all group bg-theme-secondary-200 text-theme-primary-600 dark:bg-theme-dark-950 dark:text-theme-dark-50"
        >
          <span
            class="font-semibold"
          >
            General
          </span>
        </div>
      </li>
      <li
        class="relative cursor-pointer"
        data-testid="side-menu__item--password"
      >
        <div
          class="flex relative items-center px-5 h-12 rounded-lg transition-all group dark:hover:bg-theme-dark-950 dark:hover:text-theme-dark-50 hover:bg-theme-secondary-200 hover:text-theme-secondary-800"
        >
          <span
            class="font-semibold"
          >
            Password
          </span>
        </div>
      </li>
      <li
        class="relative cursor-pointer"
        data-testid="side-menu__item--export"
      >
        <div
          class="flex relative items-center px-5 h-12 rounded-lg transition-all group dark:hover:bg-theme-dark-950 dark:hover:text-theme-dark-50 hover:bg-theme-secondary-200 hover:text-theme-secondary-800"
        >
          <span
            class="font-semibold"
          >
            Export
          </span>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
